# aether_nexus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  nexus.toml
.claude/: settings.json
.claude/agents/: capability-designer.md  metal-kernel-reviewer.md  rust-safety-auditor.md
.claude/commands/: bench.md  check.md  distiller-status.md  new-capability.md
.claude/hooks/: pre-tool-guard.sh
.claude/skills/aether-fabric-ops/: SKILL.md
.claude/skills/capability-system/: SKILL.md
.claude/skills/metal-shader-dev/: SKILL.md
.github/workflows/: ci.yml
docs/: 7phases_walkthrough.md.resolved  GAP_ANALYSIS.md  PROJECT_BLUEPRINTS_FORGED.md  REPOSITORY_SKELETON.md  WHITEPAPER.md  YELLOWPAPER.md  buildout_task.md.resolved  implementation_plan.md.resolved  walkthrough.md.resolved
nexus-core/: Cargo.toml  build.rs  nexus.toml
nexus-core/src/: agent.rs  bench.rs  capability.rs  cortex.rs  distiller.rs  fabric.rs  inference.rs  lib.rs  logging.rs  main.rs  ops.metal  ops.rs  sandbox.rs  tokenizer.rs  types.rs  weaver.rs  weaver_kernel.metal  weight_loader.rs
nexus-core/templates/: system.jinja
nexus-core/tests/: agent_sandbox_test.rs
scripts/: download_models.sh  smoke_test.sh
