[workspace]
members = ["nexus-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["AetherNexus Forge"]
rust-version = "1.85"

[workspace.dependencies]
metal = "0.30"
bytemuck = { version = "1.19", features = ["derive"] }
half = { version = "2.4", features = ["bytemuck"] }
thiserror = "2"
memmap2 = "0.9"
ring = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
tree-sitter = "0.25"
safetensors = "0.7"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "21.0.2"
minijinja = "2.16.0"
toml = "0.8"
strum = { version = "0.26", features = ["derive"] }
